<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_name_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/latobold"
        android:text="@string/Options"
        android:textColor="#383940"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="3dp"
        android:background="@color/purple_200" />

    <LinearLayout
        android:id="@+id/ll_add_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_library_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25sp"
            android:fontFamily="@font/latoregular"
            android:text="@string/Add_new_words"
            android:textColor="#383940" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_check_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_storage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25sp"
            android:fontFamily="@font/latoregular"
            android:text="@string/Check_words"
            android:textColor="#383940" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25sp"
            android:fontFamily="@font/latoregular"
            android:text="@string/Edit_lesson"
            android:textColor="#383940" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_refresh_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_refresh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25sp"
            android:fontFamily="@font/latoregular"
            android:text="@string/Refresh_lesson"
            android:textColor="#383940" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25sp"
            android:fontFamily="@font/latoregular"
            android:text="@string/Delete_lesson"
            android:textColor="#383940" />

    </LinearLayout>

</LinearLayout>