<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_lesson_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bg_grey"
        android:fontFamily="@font/latobold"
        android:paddingTop="10dp"
        android:text="Lesson Name"
        android:textAlignment="center"
        android:textColor="#383940"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/latoregular"
                android:text="@string/Add_new_words"
                android:textColor="#383940"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/layout_list_add_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btn_add_words"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_add"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Add_row"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#383940" />

            <Button
                android:id="@+id/btn_submit_words"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Submit_words"
                android:textAllCaps="false"
                android:textColor="#383940" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>